# gen-gift-card

./: .gitignore  app.py  output.txt  pyproject.toml
app/: config.py  main.py
app/services/: image_service.py  llm_service.py  service_factory.py
app/services/image_generators/: base.py  huggingface.py  openai.py  picsum.py  runware.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: button.tsx  input.tsx  radio-group.tsx  textarea.tsx
frontend/src/pages/: GiftCardGenerator.tsx  OccasionQuestions.tsx
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  preview.html  questionnaire.html
